--- a/security-service/src/main/resources/application.yml
+++ b/security-service/src/main/resources/application.yml
@@ -2,8 +2,8 @@ security-service:
   url: http://localhost:9090
 spring:
   datasource:
-    driver-class-name: org.postgresql.driver
-    url: jdbc:postgresql://localhost:5432/${POSTGRES_DB:security-service}
+    driver-class-name: org.postgresql.Driver
+    url: ${SPRING_DATASOURCE_URL}
     username: ${DB_USER:user}
     password: ${DB_PASSWORD:12345}
   jpa:
