--- a/security-service/src/main/resources/application-prod.yml
+++ b/security-service/src/main/resources/application-prod.yml
@@ -1,15 +1,22 @@
-security-service:
-  url: http://localhost:9090
-
 spring:
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${DB_USER:user}
+    password: ${DB_PASSWORD:12345}
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 logging:
   level:
