fix: Регистрация пользователя + логин с сохранением токена в Redis

--- a/security-service/src/main/resources/application.yml
+++ b/security-service/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 security-service:
   url: http://localhost:9090
-
 spring:
+  profiles:
+    active: prod
   http:
     encoding:
       charset: UTF-8
